# DoPy

./: README.md  README.rst  pyproject.toml  setup.cfg  setup.py
dopy/: __main__.py
src/: cli.py  parser.py  priority.py
