[metadata]
name = dopy
version = 0.0.1
description = "dopy: A command line application for managing tasks via ToDo.txt files
written in python."

[options]
install_requires =
    argparse
    datetime
    os
    sys

packages =
    dopy


[options.entry_points]
console_scripts =
    dopy = src.__main__:main
